--- a/css/style.css
+++ b/css/style.css
@@ -58,15 +58,15 @@ body {
 }
 
 .box{
-margin: 0 auto;
+ margin: 0 auto;
 }
 
 
 
 /*Button*/
 .button {
-background: #005864;
-border-radius: 10px;
+ background: #005864;
+ border-radius: 10px;
 }
 
 .button {
@@ -81,12 +81,17 @@ border-radius: 10px;
   cursor: pointer;
 }
 
-/*img*/
+/*images*/
 .img {
   border-radius: 20px;
   display: block;
   margin-left: auto;
   margin-right: auto;
+}
+
+.logo{
+  width:"100";
+  height: "53";
 }
 
 
