--- a/css/style.css
+++ b/css/style.css
@@ -38,76 +38,42 @@ nav ul li a.active{
 border-bottom: 2px solid white;
 }
 
-
+.main-content{
+  margin: 40px 0px;
+}
  /* Center Box */
-#heroGrid{  
-  display: flex;
-  flex-wrap: wrap;
-  align-content: center;
+ .card{
   width: 400px;
-  height: 450px;
-  padding: 30px;
   background: #FFFFFF;
   box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
   border-radius: 20px;
-  margin: 25px;
+  margin: auto;
+  padding: 24px;
   text-align: center;
-  align-items: center;
-}
+ }
+ .card-image{
+  width: 200px;
+ }
 
-.box{
- margin: 0 auto;
-}
 
 
 
 /*Button*/
-.button {
+button.primary-btn {
  background: #005864;
  border-radius: 10px;
-}
-
-.button {
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 5px 5px;
-  cursor: pointer;
-}
-
-/*images*/
-.img {
-  border-radius: 20px;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
-}
-
-.logo{
-  width:"100";
-  height: "53";
+ border: none;
+ color: white;
+ padding: 15px 32px;
+ text-align: center;
+ text-decoration: none;
+ display: inline-block;
+ font-size: 16px;
+ margin: 5px 5px;
+ cursor: pointer;
 }
 
 
-/*H1*/
-.h1 {
-  font-weight: bold;
-  font-size: 32px;
-  line-height: 39px;
-  color: #000000;
-}
-
-/*paragraph*/
-.p {
-  font-weight: normal;
-  font-size: 18px;
-  line-height: 28px;
-  color: #000000;
-}
 
 
 /* Footer */
