--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: 'Inter', sans-serif;
   background-color: #f9fdfd;
+  margin: 0;
 }
 
   /* Header */
@@ -9,7 +10,7 @@ header {
   background: #005864;
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 /*Logo*/
@@ -18,23 +19,22 @@ header {
 }
 
 /*navigation*/
-
-nav ul {
+.top-nav ul {
   list-style-type: none;
+  padding-left: 0;
 }
-nav ul li{
+.top-nav ul li{
   display: inline-block;
- 
 }
-nav ul li a{
+.top-nav ul li a{
   text-decoration: none;
   color: #f9fdfd;
   padding: 12px;
 }
-nav ul li a:hover{
+.top-nav ul li a:hover{
   border-bottom: 2px solid white;
 }
-nav ul li a.active{
+.top-nav ul li a.active{
 border-bottom: 2px solid white;
 }
 
@@ -59,7 +59,7 @@ border-bottom: 2px solid white;
 
 
 /*Button*/
-button.primary-btn {
+.primary-btn {
  background: #005864;
  border-radius: 10px;
  border: none;
@@ -72,20 +72,32 @@ button.primary-btn {
  margin: 5px 5px;
  cursor: pointer;
 }
-
+.primary-btn:hover {
+  background: #058292;
+ }
 
 
 
 /* Footer */
 
-#footer {
-  position: relative;
+footer {
   height: 100px;
-  left: 0px;
-  top: 0px;
   background: #005864;
   display: flex;
-  flex-direction: row;
+  align-items: center;
+}
+
+.footer-nav ul {
+  list-style-type: none;
+  padding-left: 0;
+}
+.footer-nav ul li{
+  display: inline-block;
+}
+.footer-nav ul li a{
+  text-decoration: none;
+  color: #f9fdfd;
+  padding: 12px;
 }
 
 .footerNav {
