--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ header {
   display: flex;
   align-items: center;
   justify-content: space-between;
+  padding: 0px 24px;
 }
 
 /*Logo*/
@@ -85,6 +86,7 @@ footer {
   background: #005864;
   display: flex;
   align-items: center;
+  padding: 0px 24px;
 }
 
 .footer-nav ul {
