--- a/css/style.css
+++ b/css/style.css
@@ -52,11 +52,33 @@ border-bottom: 2px solid white;
   padding: 24px;
   text-align: center;
  }
+
+ .skillsCard{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 400px;
+  background: #FFFFFF;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
+  border-radius: 20px;
+  margin: auto;
+  padding: 24px;
+ }
+
+ .workCard{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background: #FFFFFF;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 0.16);
+  border-radius: 20px;
+  margin: 48px;
+  padding: 24px;
+ }
+
  .card-image{
   width: 200px;
  }
-
-
 
 
 /*Button*/
@@ -76,7 +98,6 @@ border-bottom: 2px solid white;
 .primary-btn:hover {
   background: #058292;
  }
-
 
 
 /* Footer */
@@ -112,3 +133,12 @@ footer {
   padding: 24px 24px; 
   text-align: left;
  }
+
+.footer-nav ul li a:hover{
+  border-bottom: 2px solid white;
+}
+.footer-nav ul li a.active{
+border-bottom: 2px solid white;
+}
+
+
